--- a/.github/workflows/docker-emacs.yml
+++ b/.github/workflows/docker-emacs.yml
@@ -4,9 +4,9 @@ name: Emacs CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -20,7 +20,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 6.x
+          cache: true
+
+      - run: dotnet fsi post.fsx
 
       - name: Install Make and Emacs
         run: |
