--- a/.github/workflows/docker-emacs.yml
+++ b/.github/workflows/docker-emacs.yml
@@ -20,11 +20,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-dotnet@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 6.x
-          cache: true
+          #cache: true
 
       - run: dotnet fsi post.fsx
 
